<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/background2" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#2aff00" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/second_page" android:shadowColor="#000000" android:shadowDx="-2.4" android:shadowDy="2.4" android:shadowRadius="0.01" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#2aff00" android:id="@+id/textView10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/second_page" android:shadowColor="#000000" android:shadowDx="-2.4" android:shadowDy="-2.4" android:shadowRadius="0.01" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#2aff00" android:id="@+id/textView11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/second_page" android:shadowColor="#000000" android:shadowDx="2.4" android:shadowDy="2.4" android:shadowRadius="0.01" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#2aff00" android:id="@+id/textView12" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/second_page" android:shadowColor="#000000" android:shadowDx="2.4" android:shadowDy="-2.4" android:shadowRadius="0.01" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <ImageView android:id="@+id/right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/right" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:onClick="right" android:contentDescription="@string/next"/>
    <ImageView android:id="@+id/left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/left" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:onClick="left" android:contentDescription="@string/back"/>
    <ImageView android:id="@+id/wps" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="22dp" android:src="@drawable/routerpage" android:layout_below="@+id/textView1" android:layout_alignParentLeft="true" android:onClick="wifigateway" android:contentDescription="@string/wifigateway"/>
    <ImageView android:id="@+id/brute" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/routerpbrute" android:layout_alignBottom="@+id/wps" android:layout_alignParentRight="true" android:onClick="routerbrute" android:contentDescription="@string/routerbrute"/>
    <ImageView android:id="@+id/Changemymac" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="18dp" android:src="@drawable/fing" android:layout_below="@+id/brute" android:layout_centerHorizontal="true" android:onClick="fing" android:contentDescription="@string/fing"/>
    <ImageView android:id="@+id/imageView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/second" android:layout_above="@+id/right" android:layout_alignLeft="@+id/left" android:contentDescription="@string/second_page"/>
</RelativeLayout>
