<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/background4" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#2aff00" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fourth_page" android:shadowColor="#000000" android:shadowDx="-2.4" android:shadowDy="2.4" android:shadowRadius="0.01" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#2aff00" android:id="@+id/textView10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fourth_page" android:shadowColor="#000000" android:shadowDx="-2.4" android:shadowDy="-2.4" android:shadowRadius="0.01" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#2aff00" android:id="@+id/textView11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fourth_page" android:shadowColor="#000000" android:shadowDx="2.4" android:shadowDy="2.4" android:shadowRadius="0.01" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#2aff00" android:id="@+id/textView12" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fourth_page" android:shadowColor="#000000" android:shadowDx="2.4" android:shadowDy="-2.4" android:shadowRadius="0.01" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <ImageView android:id="@+id/right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/right" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:onClick="right" android:contentDescription="@string/next"/>
    <ImageView android:id="@+id/left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/left" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:onClick="left" android:contentDescription="@string/back"/>
    <ImageView android:id="@+id/netcut" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="22dp" android:src="@drawable/wifikill" android:layout_below="@+id/textView1" android:layout_alignParentLeft="true" android:onClick="netcut" android:contentDescription="@string/netcut"/>
    <ImageView android:id="@+id/csploit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/csploit" android:layout_alignBottom="@+id/netcut" android:layout_alignParentRight="true" android:onClick="cSploit" android:contentDescription="@string/csploit"/>
    <ImageView android:id="@+id/zanti" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="18dp" android:src="@drawable/zanti" android:layout_below="@+id/csploit" android:layout_centerHorizontal="true" android:onClick="zANTI" android:contentDescription="@string/zanti"/>
    <ImageView android:id="@+id/imageView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15dp" android:src="@drawable/fourth" android:layout_above="@+id/right" android:layout_centerHorizontal="true" android:contentDescription="@string/fourth_page"/>
</RelativeLayout>
