<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/background5" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#2aff00" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fifth_page" android:shadowColor="#000000" android:shadowDx="-2.4" android:shadowDy="2.4" android:shadowRadius="0.01" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#2aff00" android:id="@+id/textView10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fifth_page" android:shadowColor="#000000" android:shadowDx="-2.4" android:shadowDy="-2.4" android:shadowRadius="0.01" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#2aff00" android:id="@+id/textView11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fifth_page" android:shadowColor="#000000" android:shadowDx="2.4" android:shadowDy="2.4" android:shadowRadius="0.01" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#2aff00" android:id="@+id/textView12" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fifth_page" android:shadowColor="#000000" android:shadowDx="2.4" android:shadowDy="-2.4" android:shadowRadius="0.01" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <ImageView android:id="@+id/left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/left" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:onClick="left" android:contentDescription="@string/back"/>
    <ImageView android:id="@+id/netcut" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="22dp" android:src="@drawable/tor" android:layout_below="@+id/textView1" android:layout_alignParentLeft="true" android:onClick="tor" android:contentDescription="@string/netcut"/>
    <ImageView android:id="@+id/csploit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/websms" android:layout_alignBottom="@+id/netcut" android:layout_alignParentRight="true" android:onClick="websms" android:contentDescription="@string/websms"/>
    <ImageView android:id="@+id/zanti" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:src="@drawable/gsmspy" android:layout_below="@+id/netcut" android:layout_alignLeft="@+id/netcut" android:onClick="gsmspy" android:contentDescription="@string/gsmspy"/>
    <ImageView android:id="@+id/button1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/anonmail" android:layout_alignRight="@+id/csploit" android:layout_alignBottom="@+id/zanti" android:onClick="anonmail" android:contentDescription="@string/anonmail"/>
    <ImageView android:id="@+id/imageView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/trash" android:layout_alignBottom="@+id/left" android:layout_alignParentRight="true" android:onClick="exit" android:contentDescription="@string/fifth_page"/>
    <ImageView android:id="@+id/imageView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/fifth" android:layout_above="@+id/imageView2" android:layout_centerHorizontal="true" android:contentDescription="@string/fifth_page"/>
</RelativeLayout>
