<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/background0" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#2aff00" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/zero_page" android:shadowColor="#000000" android:shadowDx="-2.4" android:shadowDy="2.4" android:shadowRadius="0.01" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:contentDescription="@string/wifianalyzer"/>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#2aff00" android:id="@+id/textView10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/zero_page" android:shadowColor="#000000" android:shadowDx="-2.4" android:shadowDy="-2.4" android:shadowRadius="0.01" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:contentDescription="@string/wifianalyzer"/>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#2aff00" android:id="@+id/textView11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/zero_page" android:shadowColor="#000000" android:shadowDx="2.4" android:shadowDy="2.4" android:shadowRadius="0.01" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:contentDescription="@string/wifianalyzer"/>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#2aff00" android:id="@+id/textView12" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/zero_page" android:shadowColor="#000000" android:shadowDx="2.4" android:shadowDy="-2.4" android:shadowRadius="0.01" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:contentDescription="@string/wifianalyzer"/>
    <ImageView android:id="@+id/imageView1" android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/zero" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:contentDescription="@string/wifianalyzer"/>
    <ImageView android:id="@+id/button2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/terminal" android:layout_above="@+id/button3" android:layout_alignParentRight="true" android:onClick="Terminal" android:contentDescription="@string/wifianalyzer"/>
    <ImageView android:id="@+id/button1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="21dp" android:src="@drawable/domofon" android:layout_below="@+id/textView1" android:layout_alignParentLeft="true" android:onClick="Domofon" android:contentDescription="@string/wifianalyzer"/>
    <ImageView android:id="@+id/button3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:src="@drawable/busybox" android:layout_below="@+id/button1" android:layout_alignParentLeft="true" android:onClick="BusyBox" android:contentDescription="@string/wifianalyzer"/>
    <ImageView android:id="@+id/button4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/sql" android:layout_alignBottom="@+id/button3" android:layout_alignParentRight="true" android:onClick="DroidSQL" android:contentDescription="@string/wifianalyzer"/>
    <ImageView android:id="@+id/button5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:src="@drawable/ivms" android:layout_below="@+id/button3" android:onClick="iVMS" android:contentDescription="@string/wifianalyzer"/>
    <ImageView android:id="@+id/button6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ssh" android:layout_alignBaseline="@+id/button5" android:layout_alignBottom="@+id/button5" android:layout_alignParentRight="true" android:onClick="SSH" android:contentDescription="@string/wifianalyzer"/>
    <ImageView android:id="@+id/button7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:src="@drawable/qr" android:layout_below="@+id/button5" android:layout_alignParentLeft="true" android:onClick="QR" android:contentDescription="@string/wifianalyzer"/>
    <ImageView android:id="@+id/button8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/tinycam" android:layout_alignBaseline="@+id/button7" android:layout_alignBottom="@+id/button7" android:layout_alignParentRight="true" android:onClick="TinyCam" android:contentDescription="@string/wifianalyzer"/>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="#ffffff" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_title" android:shadowColor="#000000" android:shadowDx="-2.4" android:shadowDy="2.4" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:onClick="About" android:contentDescription="@string/wifianalyzer"/>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="#ffffff" android:id="@+id/textView20" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_title" android:shadowColor="#000000" android:shadowDx="-2.4" android:shadowDy="-2.4" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:onClick="About" android:contentDescription="@string/wifianalyzer"/>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="#ffffff" android:id="@+id/textView21" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_title" android:shadowColor="#000000" android:shadowDx="2.4" android:shadowDy="2.4" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:onClick="About" android:contentDescription="@string/wifianalyzer"/>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="#ffffff" android:id="@+id/textView22" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_title" android:shadowColor="#000000" android:shadowDx="2.4" android:shadowDy="-2.4" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:onClick="About" android:contentDescription="@string/wifianalyzer"/>
    <ImageView android:id="@+id/right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/right" android:layout_alignRight="@+id/button8" android:layout_alignBottom="@+id/textView2" android:onClick="right" android:contentDescription="@string/wifianalyzer"/>
    <ImageView android:id="@+id/button10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:src="@drawable/darktime" android:layout_below="@+id/button8" android:layout_alignParentRight="true" android:onClick="DarkTime" android:contentDescription="@string/darktime"/>
    <ImageView android:id="@+id/button9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/wifianalyzer" android:layout_alignLeft="@+id/button7" android:layout_alignTop="@+id/button10" android:onClick="WifiAnalyzer" android:contentDescription="@string/wifianalyzer"/>
</RelativeLayout>
